# Meta

./: .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks/: task_registry.py
